# municipios-projeto

./: .env.example  .gitignore  README.md  pyproject.toml  rascunho.md
dashboard/: app.py
dashboard/components/: navigation.py
dashboard/pages/: 1_Overview.py  2_Municipality_Profile.py  3_Rankings.py  4_Correlations.py  5_Fiscal_Analysis.py  5_Political_Economy.py  6_Choropleth_Maps.py  7_Cluster_Analysis.py
dbt_project/: .user.yml  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml.example
dbt_project/macros/: data_quality_tests.sql  utils.sql
dbt_project/models/marts/analytics/: mart_cluster_analysis.sql  schema.yml
dbt_project/models/marts/dimensions/: dim_calendario.sql  dim_mandato_prefeito.sql  dim_municipio.sql  dim_partido.sql  dimensions.yml
dbt_project/models/marts/facts/: facts.yml  fct_eleicoes.sql  fct_financas_municipais.sql  fct_indicadores_sociais.sql  fct_indicadores_sociais.sql.disabled  fct_transferencias_federais.sql
dbt_project/models/marts/fiscal/: mart_dependencia_fiscal.sql  mart_eficiencia_municipal.sql  schema.yml
dbt_project/models/marts/political/: fct_mandato_completo.sql  mart_correlacoes_politicas.sql  mart_diff_in_diff.sql  mart_painel_mandatos.sql  mart_painel_municipal.sql  schema.yml
dbt_project/models/staging/: sources.yml  staging.yml  stg_despesas.sql  stg_eleicoes.sql  stg_idhm.sql  stg_idhm.sql.disabled  stg_municipios.sql  stg_populacao.sql  stg_receitas.sql  stg_transferencias.sql
dbt_project/models/staging/social/: stg_bolsa_familia.sql  stg_ideb.sql  stg_mortalidade.sql  stg_nascimentos.sql
dbt_project/seeds/: schema.yml  seed_cluster_assignments.csv  seed_partidos.csv
docs/: api_reference.md  architecture.md  data_dictionary.md  data_sources.md  setup_guide.md
scripts/: extract_data.py
src/analysis/: __init__.py  clustering.py
src/extraction/: base_dos_dados.py
